# blackpill-template

./: Cargo.toml  README.md  debug.gdb  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
