[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
cortex-m-semihosting = "^0.3.5"
# choose a panic handler
panic-halt = "^0.2.0"
"{{project-name}}" = { path = "." }

[dependencies.stm32f4xx-hal]
version = "^0.10"
features = ["rt", "stm32f411"] # make sure your microcontroller matches this

[[bin]]
name = "{{crate_name}}"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
